Fix secret screen ScrollView alignment issue

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "expo": "~53.0.20",
+    "expo": "54",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~15.1.7",
     "expo-status-bar": "~2.2.3",
