Update config and dependencies for Expo 54 deploy

--- a/app.json
+++ b/app.json
@@ -28,7 +28,10 @@
       }
     },
     "web": {
-      "favicon": "./assets/icon.png"
+      "favicon": "./assets/icon.png",
+      "build": {
+        "publicPath": "./"
+      }
     }
   }
 }
